--- a/main.scss
+++ b/main.scss
@@ -27,6 +27,17 @@ section.game-area {
     height: 400px; 
     width: 700px;
     margin: 0 auto; 
+
+    #raksu {
+        height: 50px;
+        width: 50px;
+        background-color:black;
+        border-radius: 50%;
+        background-image: url("/img/editedraksucutout.png");
+        background-repeat: no-repeat;
+        background-size: cover; 
+        position: absolute;
+      }
 }
 
 div { 
