some initial bits

--- a/main.scss
+++ b/main.scss
@@ -27,6 +27,7 @@ section.game-area {
     height: 400px; 
     width: 700px;
     margin: 0 auto; 
+    position: relative;
 
     #raksu {
         height: 50px;
